src/parser/snapshots/clight__parser__tests__let_decl.snap
---
source: src/parser/mod.rs
expression: result
snapshot_kind: text
---
Ok(
    Decl {
        token: Token {
            kind: Let,
            token: "let",
            offset: 0,
        },
        kind: Var {
            ident: Token {
                kind: Ident,
                token: "a",
                offset: 4,
            },
            spec: Some(
                TypeSpec {
                    token: Token {
                        kind: Int,
                        token: "int",
                        offset: 7,
                    },
                    kind: Type,
                },
            ),
            init: Scalar(
                Binary {
                    lhs: Binary {
                        lhs: Ident(
                            Token {
                                kind: Ident,
                                token: "b",
                                offset: 13,
                            },
                        ),
                        op: Token {
                            kind: Plus,
                            token: "+",
                            offset: 15,
                        },
                        rhs: Binary {
                            lhs: Number(
                                2,
                            ),
                            op: Token {
                                kind: Star,
                                token: "*",
                                offset: 19,
                            },
                            rhs: Number(
                                3,
                            ),
                        },
                    },
                    op: Token {
                        kind: Plus,
                        token: "+",
                        offset: 23,
                    },
                    rhs: Number(
                        1,
                    ),
                },
            ),
        },
    },
)
